--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,19 @@
         <camel-version>2.15.2</camel-version>
         <xbean-spring-version>3.5</xbean-spring-version>
     </properties>
-
     <build>
-    <pluginManagement>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </pluginManagement>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <dependencies>
         <!-- Spring Dependencies -->
@@ -69,14 +68,18 @@
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
             <version>2.7.13</version>
-        </dependency>   
-        <!-- Jackson The JSON Producer dependency -->   
+        </dependency>
+        <!-- camel-cxf -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-cxf</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+        <!-- Jackson The JSON Producer dependency -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-jaxrs</artifactId>
             <version>1.9.13</version>
         </dependency>
     </dependencies>
-
-
 </project>
