--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     </welcome-file-list>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/beans.xml</param-value>
+        <param-value>/WEB-INF/beans.xml,/WEB-INF/camel-beans.xml</param-value>
     </context-param>
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
