--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
         config for creating camel route -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/beans.xml,/WEB-INF/camel-beans.xml</param-value>
+        <param-value>/WEB-INF/beans.xml,/WEB-INF/camel-beans2.xml</param-value>
     </context-param>
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
